src/specific_models/bot-iot/attack_identification/logfile.2020-07-12-20_07_51.log
  File "rnn.py", line 549
    input_shape = (X_train.shape [1], X_train.shape [2])))
    ^
IndentationError: unexpected indent
